--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,11 @@ services:
   app:
     image: samoilov/memoryleak:latest
     environment:
-      - JAVA_OPTS=-Xmx40m -Xms30m -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.port=9098 -Dcom.sun.management.jmxremote.rmi.port=9098 -Dcom.sun.management.jmxremote.local.only=false
-      - BYTE_ARRAY_SIZE=500
+      - JAVA_TOOL_OPTIONS=-XX:G1HeapRegionSize=1m -XX:+UseStringDeduplication -XX:MaxRAMPercentage=50 -XX:+HeapDumpOnOutOfMemoryError -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.port=9099 -Dcom.sun.management.jmxremote.rmi.port=9099 -Dcom.sun.management.jmxremote.local.only=false -Djava.rmi.server.hostname=192.168.0.116 -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000
+      - BYTE_ARRAY_SIZE=50
     ports:
       - "8080:8080"
-      - "9098:9098"
+      - "8000:8000"
+      - "9099:9099"
     mem_limit: 50M
 
