add jemalloc support

--- a/DockerfilePeformanceRunner
+++ b/DockerfilePeformanceRunner
@@ -1,4 +1,5 @@
 FROM samoilov/performance-base:latest
 COPY ./build/libs/*-all.jar app.jar
+COPY ./startJvmBackground.sh startJvmBackground.sh
 
-ENTRYPOINT exec java -agentpath:/jprofiler11.1.4/bin/linux-x64/libjprofilerti.so=port=8849 $JAVA_OPTS -jar /app.jar
+CMD /startJvmBackground.sh
